quick replacement wiht new proto definitions
